css/main.css
html {
  box-sizing: border-box;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  margin: 0;
  min-height: 100vh;
  padding-bottom: 44px;
  line-height: 1.5;
}

p {
  font-size: 1rem;
  font-family: arial;
}

img {
  width: 100%;
  border-radius: 10px;
}

.banner {
  padding: calc(7em + 20vw) 0 0;
  background: url("../images/layout.jpg") center center / cover no-repeat;
  margin: 0;
}

.first {
  background-color: #894C22;
  padding: 1em;
  margin: 0;
}

h1 {
  color: white;
  text-align: center;
  font-size: 2.5rem;
  font-family: 'Dancing Script', cursive;
}

header {
  background-color: #754C29;
  padding: 1em 0em 0em 0em;
}

nav li {
  display: block;
  float: left;
  width: 33.333333%;
  list-style-type: none;
}

nav a {
  display: block;
  border-top: 1px solid black;
  border-left: 1px solid black;
  margin: 0;
  padding: 0.4em 0.4em 0.4em 0.4em;
  color: white;
  background-color: #B78A4B;
  text-decoration: none;
  text-align: center;
  font-family: arial;
}

nav ol {
  overflow: hidden;
  padding: 0;
  width: 100%;
}

a:hover {
  background-color: #894C22;
  opacity: .75;
  color: white;
}

a {
  text-decoration: none;
  color: white;
}

h2 {
  text-align: center;
  color: white;
  margin: 0;
  font-size: 2rem;
  font-family: 'Dancing Script', cursive;
}

.carp {
  padding: .5em;
  margin: 0;
}

h3 {
  text-align: center;
  margin: .5em;
  font-size: 1.5rem;
  font-family: 'Dancing Script', cursive;
  color: #822707;
}

.all {
  background-color: #B78A4B;
}

.bread {
  background-color: #B78A4B;
  padding: 1em;
}

.cookies {
  background-color: #BC7D31;
  padding: 1em;
}

.pastries {
  background-color: #CE802C;
  padding: 1em;
}

.sandwhich {
  background-color: #95653F;
  padding: 1em;
}

.test {
  background-color: #894C22;
  padding: 1em;
}

.info {
  background-color: #CE802C;
  padding: 1em;
  text-align: center;
}

.enter {
  background-color: #894C22;
  border: 1px solid black;
}

.enter-2 {
  background-color: #894C22;
  border: 1px solid black;
  padding-bottom: 7em;
}

em {
  font-weight: bold;
}

dd {
  margin: 0;
  text-align: center;
  font-family: arial;
  color: #684F3E;
}

dt {
  text-align: center;
  font-family: arial;
  color: #592D15;
}

footer {
  clear: both;
  background-color: #754C29;
  padding: 1em;
  text-align: center;
}

